<resources>
    <string name="app_name">Til Point</string>

    <!--employee activities-->
    <string name="title_place_order">place an order</string>

    <!--employer activities-->
    <string name="title_add_item">create a new item</string>
    <string name="title_item_list">view Items</string>
    <string name="title_item_editor">edit an item</string>


    <!--Staff Text-->


    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->
    <string name="pref_ringtone_silent">Silent</string>

    <!--pref_general.xml-->

    <!--Barcode Scanner-->

    <!--end pref_general.xml-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_group_employee">Work</string>
    <string name="title_group_employer">Admin</string>

    <!--View Orders-->
    <string name="action_item_list_opt_save">update</string>
    <string name="action_item_list_opt_edit">edit</string>
    <string name="action_item_list_opt_delete">delete</string>
    <string name="title_order_list">view Orders</string>
    <string name="title_activity_view_order">view Order</string>
    <string name="search_item_title">Search</string>
    <string name="order_option_menu">Order option menu</string>
    <string name="title_activity_view_all_orders">view orders</string>

    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_items">Items</string>
    <string name="label_total">Total</string>
    <string name="label_order">Order#</string>
    <string name="label_units">Units</string>
    <string name="label_asserts">Asserts</string>
    <string name="label_paid">Paid</string>
    <string name="label_credit">Credit</string>
    <string name="label_damage">Damage</string>
    <string name="label_orders">Orders</string>
    <string name="label_stock">Stock</string>
    <string name="label_modified_stock">Replenished Stock</string>
    <string name="label_sold">Sold</string>
    <string name="prompt_place_another_order">Want to place another order?</string>
    <string name="title_fragment_dashboard">dashboard</string>
    <string name="pref_description_night_mode_enabled">Changes theme to night mode.</string>
    <string name="pref_title_night_mode_enabled">Night mode</string>
    <string name="pref_description_auto_theme_mode_enabled">Change theme automatically to either Night or Day mode, base on your time zone.</string>
    <string name="pref_title_auto_theme_mode_enabled">Auto Mode</string>
    <string name="content_loader_processing">Loading&#8230;</string>
    <string name="content_loader_done">Done</string>
    <string name="content_loader_empty">could not find content!</string>
    <string name="label_item_name">Item\'s name</string>
    <string name="label_item_price_per_unit">Item\'s price per unit</string>
    <string name="label_item_count">Item\'s stock count</string>
    <string name="action_filter_by_placed_items">Filter by Placed Items</string>
    <string name="action_reload">Reload</string>
    <string name="label_sales">Sales</string>
    <string name="label_stock_per_item">Units Remaining</string>
    <string name="selected_fragment_onchange_wait">Loading please wait&#8230;</string>
    <string name="action_redirect_fragment_content_missing">
        wait a moment, content was not available&#8230;
        \nredirecting you here!
    </string>
    <string name="label_show_legend_details">Show Details</string>
    <string name="pref_description_item_max_value">Set item maximum value in stock count</string>
    <string name="pref_item_max_value">Maximum Value</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <string name="action_show_minimum_units">min</string>
    <string name="action_filter_by_items">Filter items</string>
    <string name="action_show_maximum_units">max</string>
    <string name="action_show_medium_units">mid</string>
    <string name="action_revert">reload</string>
    <string name="label_advanced">Show advanced settings</string>
    <string name="label_item_price_per_unit_specials">Special\'s price</string>
    <string name="label_item_special_start">Start date</string>
    <string name="label_item_special_end">End date</string>
    <string name="label_item_special_start_time">Start time</string>
    <string name="label_item_special_end_time">End time</string>
    <string name="action_cancel">Cancel</string>
    <string name="units_per_bundle">units per bundle</string>
    <string name="bundles">bundles</string>
    <string name="calculated_units">calculated units</string>
    <string name="calculate_units">calculate units</string>
    <string name="save">Save</string>
    <string name="title_group_settings">More</string>


</resources>
