<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_item"
        android:icon="@drawable/ic_search"
        android:title="@string/search_item_title"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />


    <item
        android:enabled="true"
        android:icon="@drawable/ic_filter_list"
        android:title="@string/action_filter_by_items"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_filter_max_items"
                android:title="@string/action_show_maximum_units"
                android:visible="true"
                app:showAsAction="withText" />
            <item
                android:id="@+id/action_filter_med_items"
                android:title="@string/action_show_medium_units"
                android:visible="true"
                app:showAsAction="withText" />
            <item
                android:id="@+id/action_filter_min_items"
                android:title="@string/action_show_minimum_units"
                android:visible="true"
                app:showAsAction="withText" />
        </menu>
    </item>

    <item
        android:id="@+id/action_reload"
        android:icon="@drawable/ic_refresh"
        android:title="@string/action_revert"
        app:showAsAction="always" />

</menu>