<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    tools:context=".boundary.fragments.ViewOrderFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/order_option"
            android:layout_width="19dp"
            android:layout_height="40dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/order_option_menu"
            app:layout_constraintBottom_toBottomOf="@+id/view_orders_item_order_total"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_orders_item_order_time"
            app:srcCompat="@drawable/baseline_more_vert_black_18dp" />

        <TextView
            android:id="@+id/textView7"
            style="@style/ItemLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/label_order"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/view_orders_item_order_number"
            style="@style/ItemInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            tools:text="1" />

        <TextView
            android:id="@+id/textView12"
            style="@style/ItemLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/label_time"
            app:layout_constraintBaseline_toBaselineOf="@+id/view_orders_item_order_number"
            app:layout_constraintEnd_toStartOf="@+id/view_orders_item_order_time"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            style="@style/ItemLabel"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/label_total"
            app:layout_constraintBaseline_toBaselineOf="@+id/view_orders_item_order_units"
            app:layout_constraintEnd_toStartOf="@+id/view_orders_item_order_total"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/view_orders_item_order_units" />

        <TextView
            android:id="@+id/view_orders_item_order_total"
            style="@style/ItemInfoTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/view_orders_item_order_time"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/view_orders_item_order_time"
            tools:text="R 30.00" />

        <TextView
            android:id="@+id/view_orders_item_order_time"
            style="@style/ItemInfo"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
            app:layout_constraintEnd_toStartOf="@+id/order_option"
            tools:text="22:52" />

        <TextView
            android:id="@+id/textView14"
            style="@style/ItemLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/label_items"
            app:layout_constraintEnd_toStartOf="@+id/view_orders_item_order_units"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/view_orders_item_order_units"
            style="@style/ItemInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
            app:layout_constraintStart_toStartOf="@+id/view_orders_item_order_number"
            tools:text="2" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>