<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    tools:context=".boundary.fragments.OrdersFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_order"
            android:textStyle="bold"
            android:typeface="normal"
            app:fontFamily="serif-monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/view_orders_item_order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            style="@style/TextCaptionLight"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            tools:text="002" />

        <ImageView
            android:id="@+id/view_orders_item_order_option"
            android:layout_width="19dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:foregroundGravity="top"
            app:layout_constraintBottom_toTopOf="@+id/view_orders_item_order_total"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/baseline_more_vert_black_18dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_date"
            android:textStyle="bold"
            android:typeface="normal"
            app:fontFamily="serif-monospace"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/view_orders_item_order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextCaptionLight"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="@+id/view_orders_item_order_number"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/view_orders_item_order_number"
            tools:text="08 November 2018" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_time"
            android:textStyle="bold"
            android:typeface="normal"
            app:fontFamily="serif-monospace"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/view_orders_item_order_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextCaptionLight"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="@+id/view_orders_item_order_date"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/view_orders_item_order_date"
            tools:text="04:12 PM" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/label_total"
            android:textStyle="bold"
            android:typeface="normal"
            app:fontFamily="serif-monospace"
            app:layout_constraintBaseline_toBaselineOf="@+id/view_orders_item_order_timestamp"
            app:layout_constraintEnd_toStartOf="@+id/view_orders_item_order_total"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/view_orders_item_order_timestamp" />

        <TextView
            android:id="@+id/view_orders_item_order_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#f00"
            style="@style/TextCaptionLight"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
            app:layout_constraintEnd_toEndOf="@+id/view_orders_item_order_option"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/view_orders_item_order_option"
            tools:text="R 30.00" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/label_items"
            android:textStyle="bold"
            android:typeface="normal"
            app:fontFamily="serif-monospace"
            app:layout_constraintBaseline_toBaselineOf="@+id/view_orders_item_order_number"
            app:layout_constraintEnd_toStartOf="@+id/view_orders_item_order_units" />

        <TextView
            android:id="@+id/view_orders_item_order_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            style="@style/TextCaptionLight"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
            app:layout_constraintEnd_toStartOf="@+id/view_orders_item_order_option"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            tools:text="2" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>