<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboard_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".boundary.fragments.DashBoardFragment">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="snap"
            app:titleEnabled="false">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/dashboard_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                    <TextView
                        android:id="@+id/graph_title"
                        style="@style/GraphLabelAppbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/label_sales"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="@+id/graph"
                        app:layout_constraintStart_toEndOf="@+id/graph_y_label"
                        app:layout_constraintTop_toTopOf="parent" />

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/graph"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/graph_y_label"
                    app:layout_constraintTop_toBottomOf="@+id/graph_title"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/graph_y_label"
                    style="@style/GraphDataAppbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:rotation="270"
                    android:text="@string/label_units"
                    app:layout_constraintBottom_toBottomOf="@+id/graph"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/graph" />


                <TextView
                    android:id="@+id/graph_x_label"
                    style="@style/GraphDataAppbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/label_date"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/graph"
                    app:layout_constraintHorizontal_bias="0.51"
                    app:layout_constraintStart_toStartOf="@+id/graph"
                    app:layout_constraintTop_toBottomOf="@+id/graph"
                    app:layout_constraintVertical_bias="1.0" />


            </android.support.constraint.ConstraintLayout>


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

   <include layout="@layout/layout_content_recycler"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>